fix: tests; codestyle